@@ -41,7 +41,9 @@
 <li>coders/wpg.c (ReadWPGImage): Patch submitted by Petr Gajdos to
 check that .Width and .Height are greater than zero before they
 are assigned to image-&gt;columns and image-&gt;rows respectively
-(CVE-2014-9815).</li>
+(CVE-2014-9815).
+(ReadWPGImage): Do more validations on WPG_Palette.StartIndex and
+WPG_Palette.NumOfEntries.</li>
 </ul>
 </blockquote>
 <p>2017-08-29  Glenn Randers-Pehrson  &lt;<a class="reference external" href="mailto:glennrp&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">glennrp<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
